--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pyrogram~=1.2.9
-TgCrypto
-SQLAlchemy~=1.4.21
-psycopg2
-pyromod~=1.5
+pyrogram~=2.0.106
+TgCrypto~=1.2.5
+SQLAlchemy~=2.0.20
+psycopg2~=2.9.7
+pyromod~=2.0.0
